added getting any scannable item from one endpoint
